- Berücksichtigung der Felder "Nachname" und "Bezeichnung" bei Sortierung der Auswahlliste    
- Bugfix bei Anzeige des Raumes und des Bildes in der Sidebar über die Metabox "Ansprechpartner"    
- auf Kontaktseite ID der aktuellen Person in Kontexthilfe eingebunden    
- Einbindung von Sprechzeiten aus UnivIS    
- Kompatibilität mit PHP7.1    

####Version 2.2.0:    
- Standard-Kontakt-Übersichtsseite kann mit einer eigens gestaltbaren Seite überschrieben werden, diese muss den Slug "person" haben        

####Version 2.1.20:    
- Einbindung der Übersichtsseite archive-person.php und archive-standort.php (je nach Bedarf in das eigene Theme zu kopieren und daran anzupassen)    

####Version 2.1.19:     
- Ergänzung von lecturetypen ES (Examensseminar), KS (Kombiseminar), MAS (Masterseminar), GS (Grundseminar), AS (Aufbauseminar)                 
- Issue #140: englische Ausgabe aus UnivIS (sofern vorhanden) für Organisation und Abteilung     
- Bugfix: fehlende Anzeige von verknüpften Kontakten in Sidebar     
- Issue #167: Kontakte auch in Navigation einbindbar    

####Version 2.1.18:     
- Bugfix #178: fehlender Name auf Kontakt-Einzelseite korrigiert       
- Formatierung Content-Ausgabe optimiert      
- Bugfixes Format page    

####Version 2.1.17:     
- Bugfix #152: Erweiterung von format="liste", kommasepariert kann die Anzeige von Telefonnummer und/oder Mailadresse über die show-Parameter telefon und/oder mail ergänzt werden    
- Enhancement #169: Format-Klassen ergänzt, für liste class="list", für sidebar class="side", für page class="page"    

####Version 2.1.16:     
- Nochmal Bugfix #170: Doppelte Inhaltsausgabe bei format=page auch für Ausgabe der Kategorie    
- Überschrift bei format="page": Standardmäßig wird auf Ausgabe des Namens bzw. (wenn nicht dieser nicht vorhanden ist) Titels verzichtet, optional aber über show="name" anzeigbar    
- Bugfix #155: Fehlerhafte Anzeige von Raum und Adresse    